--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,167 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main_div{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  background-color: rgb(217, 230, 248);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
+
+.center_div{
+  width: 25%;
+  height: 80vh;
+  background: #fff;
+  /* text-align: center; */
+  justify-content: center; 
+  border-radius: 20px;
+  box-shadow: 5px 5px 25px -5px rgba(0, 0, 0, 0.5);
+}
+
+h1{
+  /* background-color: rgb(16, 17, 51); */
+  color: #000;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  /* margin-top: 40px;*/
+  margin: 30px 0px;
+  font-size: 60px;
+  font-weight: 300;
+  text-shadow: 5px 5px 5px #555;
+  text-transform: uppercase;
+  
+  
+  
+}
+.head{
+  text-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.5);
+}
+
+input{
+  text-align: center;
+  height: 30px;
+  top: 10px;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  font-weight: 500;
+  width: 60%;
+  border-bottom: 2px solid rgb(92, 26, 59) ;
+}
+
+.btn{
+  width: 40px;
+  min-height: 40px;
+  border-radius: 50%;
+  border-color: none;
+  border: none;
+  outline: none;
+  background: rgb(92, 26, 59);
+  color: #fff;
+  font-size: 30px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.btn:hover{
+  background: green;
+}
+ol{
+  margin-top: 40px;
+  
+}
+
+ol li {
+  padding-left: 0%;
+  min-height: 40px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 500;
+  display: flex;
+  color: rgb(92, 26, 59);
+  text-transform: capitalize;
+}
+
+.todo_style{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
+.todo_style .cross{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  color: #fff;
+  background: rgb(92, 26, 59);
+  font-size: 20px;
+  font-weight: 600;
+  margin: 0px 15px 0px 35px;
+  margin-bottom: 12px;
+  border: none;
+  outline: none;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.5);
+
+ }
+
+ .cross:hover{
+   background: rgb(211, 37, 37);
+ }
+.buttons{
+  display: flex;
+  flex-basis: 50%;
+ 
+  
+}
+ .btn_style{
+  width: 30%;
+  padding: 10px;
+  margin:50px;
+  
+  font-size: 30px;
+  background:  rgb(16, 17, 51);
+  color: #fff;
+  border:none;
+  outline: none;
+  border-radius: 5px;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+
+ }
+
+ .btn_style:hover{
+   background: rgb(80, 221, 221);
+   color: #000;
+ }
+
+ .newBtn{
+   margin-left: 10px !important ;
+  width: 50px;
+  height: 55px;
+  border-radius: 50% !important;
+  background-color: #16a085 !important;
+   color: #fff !important;
+ }
+
+ .newBtn:hover{
+  background-color: #fff !important ;
+   color: #16a085 !important;
+ }
+
+ .delete{
+   margin-left: 5px;
+   margin-bottom: 2px;
+ }
